@@ -1,5 +1,10 @@
 2012-04-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
+	* include/graphs/functions_fsgraph.php: Added urlencode in units to
+	scape weird symbols like %, &, etc.
+
+2012-04-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
 	* include/graphs/fgraph.php: Added check for empty legend in flash 
 	charts.
 
